# docs/swagger.json
@@ -391,22 +391,22 @@
                 }
             }
         },
-        "/api/v1/jobs/topics": {
-            "get": {
-                "description": "Get jobs topics",
+        "/api/v1/jobs/queued": {
+            "delete": {
+                "description": "Delete queued jobs",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
                     "Jobs"
                 ],
-                "summary": "Get jobs topics",
-                "operationId": "jobs-topics",
+                "summary": "Delete queued jobs",
+                "operationId": "jobs-delete-queued",
                 "responses": {
                     "200": {
                         "description": "successful operation",
                         "schema": {
-                            "$ref": "#/definitions/web.JSONResultGetJobsTopics"
+                            "$ref": "#/definitions/web.JSONResultSuccess"
                         }
                     }
                 }
@@ -428,6 +428,27 @@
                         "description": "successful operation",
                         "schema": {
                             "$ref": "#/definitions/web.JSONResultGetJobsMetrics"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/resource/{resourceName}/unlock": {
+            "post": {
+                "description": "Unlock a single resource",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Resources"
+                ],
+                "summary": "Unlock a single resource",
+                "operationId": "resource-unlock",
+                "responses": {
+                    "200": {
+                        "description": "successful operation",
+                        "schema": {
+                            "$ref": "#/definitions/web.JSONResultSuccess"
                         }
                     }
                 }
@@ -470,6 +491,48 @@
                         "description": "successful operation",
                         "schema": {
                             "$ref": "#/definitions/web.JSONResultSuccess"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/topics": {
+            "get": {
+                "description": "Get jobs topics",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Topics"
+                ],
+                "summary": "Get jobs topics",
+                "operationId": "jobs-topics",
+                "responses": {
+                    "200": {
+                        "description": "successful operation",
+                        "schema": {
+                            "$ref": "#/definitions/web.JSONResultGetTopics"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/topics/stats": {
+            "get": {
+                "description": "Get topics stats",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Topics"
+                ],
+                "summary": "Get topics stats",
+                "operationId": "topics-stats",
+                "responses": {
+                    "200": {
+                        "description": "successful operation",
+                        "schema": {
+                            "$ref": "#/definitions/web.JSONResultGetTopicsStats"
                         }
                     }
                 }
@@ -806,6 +869,35 @@
                 }
             }
         },
+        "metrics.TopicMetrics": {
+            "type": "object",
+            "properties": {
+                "activeJobs": {
+                    "description": "number of active jobs in the topic",
+                    "type": "integer"
+                },
+                "averageDuration": {
+                    "description": "average duration of jobs in the topic (in seconds)",
+                    "type": "number"
+                },
+                "percentJobs": {
+                    "description": "percentage of jobs in the topic (0.0 - 100.0)",
+                    "type": "number"
+                },
+                "successRate": {
+                    "description": "success rate of jobs in the topic (0.0 - 1.0)",
+                    "type": "number"
+                },
+                "topicName": {
+                    "description": "name of the topic",
+                    "type": "string"
+                },
+                "totalJobs": {
+                    "description": "total number of jobs in the topic",
+                    "type": "integer"
+                }
+            }
+        },
         "web.JSONResultCloneJob": {
             "type": "object",
             "properties": {
@@ -920,28 +1012,6 @@
                 }
             }
         },
-        "web.JSONResultGetJobsTopics": {
-            "type": "object",
-            "properties": {
-                "code": {
-                    "description": "The result code",
-                    "type": "integer",
-                    "example": 200
-                },
-                "message": {
-                    "description": "The result message",
-                    "type": "string",
-                    "example": "success"
-                },
-                "topics": {
-                    "description": "The job topics",
-                    "type": "array",
-                    "items": {
-                        "type": "string"
-                    }
-                }
-            }
-        },
         "web.JSONResultGetLockedResources": {
             "type": "object",
             "properties": {
@@ -983,6 +1053,50 @@
                             "$ref": "#/definitions/web.TopicOldJobsMap"
                         }
                     ]
+                }
+            }
+        },
+        "web.JSONResultGetTopics": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "description": "The result code",
+                    "type": "integer",
+                    "example": 200
+                },
+                "message": {
+                    "description": "The result message",
+                    "type": "string",
+                    "example": "success"
+                },
+                "topics": {
+                    "description": "The job topics",
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                }
+            }
+        },
+        "web.JSONResultGetTopicsStats": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "description": "The result code",
+                    "type": "integer",
+                    "example": 200
+                },
+                "message": {
+                    "description": "The result message",
+                    "type": "string",
+                    "example": "success"
+                },
+                "topics": {
+                    "description": "The job topics with metrics",
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/metrics.TopicMetrics"
+                    }
                 }
             }
         },
